--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,8 +8,7 @@
 		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
 		<meta name="keywords" content="Zac Nolan, Zac, Nolan, Portfolio"/>
 		<meta name="author" content="Zac Nolan"/>
-        <script src="/js/script.js"></script>
-        <script src="script.js"></script>
+        <script src="../js/hmenu.js"></script>
     </head>
     <body>
         <div id = "menu">
