added background image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	</head>
 	
 	<body>
+		<img id="back" src="imgs/back.webp">
 		<div id = "menu">
 			<img id="hmenu" onclick="hmenu()" src="imgs/hmenu.webp">
 		</div>
