Added fade in for background image,

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	
 	<body>
-		<img id="back" src="imgs/back.webp">
+		<img id="back" src="imgs/back.webp" onload="this.style.opacity=1;">
 		<div id = "menu">
 			<img id="hmenu" onclick="hmenu()" src="imgs/hmenu.webp">
 		</div>
