--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Zac Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
-		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
-		<meta name="keywords" content="Zac Nolan, Zac, Nolan, Portfolio"/>
+		<meta name="description" content="I'm a student and web developer based in the UK."/>
+		<meta name="keywords" content="Zac Nolan, Nolan, Developer, Portfolio"/>
 		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
