fixed wordle home button

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -11,14 +11,9 @@
 	</head>
 	
 	<body onload="wordle();">
-		<div id = "menu">
-			<img id="hmenu" onclick="hmenu()" src="../imgs/hmenu.webp">
-		</div>
-		<div id = "fullmenu">
-			<a href = "/.">PROJECTS</a>
-			<a href = "/aboutme/">ABOUT ME</a>
-		</div>
 
+		<button onclick="home()" id = "home_button" class = "button">Home</button>
+		
 		<button onclick="wordle()" id = "new_button" class = "button">New Game</button>
 		<div id = "content">
 			<!-- dynamically generated rows -->
