--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="back"><img id ='it' src="imgs/back/p3.webp"></div>
 		<div id="menu">
 			<div class="tab" data-name="container" data-type="flex" onclick="tab(0)">About</div>
-			<div class="tab" data-name='portfolio' data-type='block' onclick="tab(1)">Portfolio</div>
+			<div class="tab" data-name='portfolio' data-type='block' onclick="tab(1)">Projects</div>
 		</div>
 
 		<div id="cont">
@@ -43,7 +43,7 @@
 			</div>
 	
 			<div id = "portfolio" class = "portfolio val" style="display:none;">
-				<div id="porttitle">Portfolio</div> <!--dynamically generated-->
+				<div id="porttitle">Projects</div> <!--dynamically generated-->
 			</div>
 		</div>
 
