Fixed reaction page

--- a/reaction/index.html
+++ b/reaction/index.html
@@ -11,7 +11,7 @@
 	
 	<body>
 
-		<button onclick="home()" id = "home_button" class = "button">Home</button>
+		<a href="../" id = "home_button" class = "button">Home</a>
 		<div id = "screen" onclick="screen_click()">
 			<div id = "text">
 				Click anywhere to start...
