--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 	</head>
 	
 	<body >
+		<div id="left" class="panel"></div>
+		<div id="right" class="panel"></div>
+
+		<div id="top" class="panel2"></div>
+		<div id="bottom" class="panel2"></div>
+
 		<div id="back"><img id ='it' src="imgs/back/p3.webp"></div>
 		<div id="menu">
 			<div class="tab" data-name="container" data-type="flex" onclick="tab(0)">About</div>
