--- a/wordle/index.html
+++ b/wordle/index.html
@@ -13,8 +13,10 @@
 	<body onload="wordle();">
 
 		<button onclick="home()" id = "home_button" class = "button">Home</button>
-		
-		<button onclick="wordle()" id = "new_button" class = "button">New Game</button>
+		<div id="warning">
+			This game is better played on a bigger device.
+		</div>
+		<a href="." id = "new_button" class = "button">New Game</a>
 		<div id = "content">
 			<!-- dynamically generated rows -->
 		</div>
