Adjusted sizing fo wordle

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -11,11 +11,10 @@
 	</head>
 	
 	<body onload="wordle();">
-
-		<button onclick="home()" id = "home_button" class = "button">Home</button>
 		<div id="warning">
-			This game is better played on a bigger device.
+			Play in portrait or on a bigger device.
 		</div>
+		<button onclick="home()" id = "home_button" class = "button">Home</button>
 		<a href="." id = "new_button" class = "button">New Game</a>
 		<div id = "content">
 			<!-- dynamically generated rows -->
