--- a/wordle/index.html
+++ b/wordle/index.html
@@ -12,7 +12,7 @@
 	
 	<body onload="wordle();">
 		<div id="warning">
-			Play in portrait or on a bigger device.
+			Play in portrait / on a bigger device.
 		</div>
 		<button onclick="home()" id = "home_button" class = "button">Home</button>
 		<a href="." id = "new_button" class = "button">New Game</a>
