Changed splash screen to be skills and interests

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 			<div class = "container val" id="container">
 				<div onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Zac Nolan.</div>
 				<div class = "bio" id="bio">
-					<p>I'm a student and web developer.</p>
-					<p>My experience is mostly in web development and data analysis, though I have also developed projects using languages such as C++.</p>
-					
+					<div class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Unity<br/>- Python and Data Analysis <br/>- SQL and Databases</p>
+					</div>
+					<div class="item-b"><p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Climbing<br/>- Writing <br/>- Video games</p>
+					</div>
 					<div class = "contacts">
 						<a class = "contact" href = "mailto:zac.i.nolan@gmail.com">zac.i.nolan@gmail.com</a>
 					</div>
