stuff in progress

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 				</div>
 			</div>
 	
-			<div id = "portfolio" class = "portfolio val" style="display:none;">
-			</div>
+			<div id = "portfolio" class = "portfolio val" style="display:none;"></div>
 		</div>
 		
 	
