Sped up animations

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class = "bio" id="bio">
 					<div class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Unity<br/>- Python and Data Analysis <br/>- SQL and Databases</p>
 					</div>
-					<div class="item-b"><p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Climbing<br/>- Writing <br/>- Video games</p>
+					<div class="item-b" id="second"><p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Climbing<br/>- Writing <br/>- Video games</p>
 					</div>
 					<div class = "contacts">
 						<a class = "contact" href = "mailto:zac.i.nolan@gmail.com">zac.i.nolan@gmail.com</a>
