--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<!-- Finished -->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Zac Nolan</title>
+		<title>Indy Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
 		<meta name="description" content="I'm a student and web developer based in the UK."/>
-		<meta name="keywords" content="Zac Nolan, Nolan, Developer, Portfolio"/>
-		<meta name="author" content="Zac Nolan"/>
+		<meta name="keywords" content="Indy Nolan, Nolan, Developer, Portfolio"/>
+		<meta name="author" content="Indy Nolan"/>
 	</head>
 	
 	<body >
@@ -28,14 +28,14 @@
 
 		<div id="cont">
 			<div class = "container val" id="container">
-				<div onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Zac Nolan.</div>
+				<div onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indy Nolan.</div>
 				<div class = "bio" id="bio">
 					<div class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Unity<br/>- Python and Data Analysis <br/>- SQL and Databases</p>
 					</div>
 					<div class="item-b" id="second"><p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Climbing<br/>- Writing <br/>- Video games</p>
 					</div>
 					<div class = "contacts">
-						<a class = "contact" href = "mailto:zac.i.nolan@gmail.com">zac.i.nolan@gmail.com</a>
+						<a class = "contact" href = "mailto:indigogonolan@gmail.com">indigogo.nolan@gmail.com</a>
 					</div>
 					
 				</div>
