--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div id="cont">
 			<div class = "container val" id="container">
-				<div onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indy Nolan.</div>
+				<div onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indy.</div>
 				<div class = "bio" id="bio">
 					<div class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Unity<br/>- Python and Data Analysis <br/>- SQL and Databases</p>
 					</div>
