--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Indy Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 		<meta name="description" content="I'm a student and web developer based in the UK."/>
-		<meta name="keywords" content="Indy Nolan, Nolan, Developer, Portfolio"/>
+		<meta name="keywords" content="Indy Nolan, Zac Nolan, Nolan, Zac, Indy, Developer, Portfolio"/>
 		<meta name="author" content="Indy Nolan"/>
 	</head>
 	
