--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<link rel="stylesheet" href = "stylesheet.css">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-		<meta name="description" content="I'm a student and web developer based in the UK."/>
-		<meta name="keywords" content="Indy Nolan, Zac Nolan, Nolan, Zac, Indy, Developer, Portfolio"/>
-		<meta name="author" content="Indy Nolan"/>
+		<meta name="description" content="Hi, I'm Indy Nolan, a student and web developer based in the UK."/>
+		<meta name="keywords" content="Indy Nolan, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Indy, Developer, Portfolio"/>
+		<meta name="author" content="Indy Nolan, Indigo Nolan"/>
 	</head>
 	
 	<body >
