--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<meta name="description" content="Hi, I'm Indy Nolan, a student and web developer based in the UK."/>
-		<meta name="keywords" content="Indy Nolan, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Indy, Developer, Portfolio"/>
+		<meta name="keywords" content="Indy Nolan, Indy, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Developer, Portfolio"/>
 		<meta name="author" content="Indy Nolan, Indigo Nolan"/>
 	</head>
 	
