--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Indy Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="boykisser.ico">
 
 		<meta name="description" content="Hi, I'm Indy Nolan, a student and web developer based in the UK."/>
 		<meta name="keywords" content="Indy Nolan, Indy, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Developer, Portfolio"/>
