--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<!-- Finished -->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Indy Nolan</title>
+		<title>Indigo Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-		<meta name="description" content="Hi, I'm Indy Nolan, a student and web developer based in the UK."/>
-		<meta name="keywords" content="Indy Nolan, Indy, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Developer, Portfolio"/>
-		<meta name="author" content="Indy Nolan, Indigo Nolan"/>
+		<meta name="description" content="Hi, I'm Indigo Nolan, a student and web developer based in the UK."/>
+		<meta name="keywords" content="Indigo Nolan, Indy Nolan, Indy, Zac Nolan, Nolan, Zac, Indigo, Indigo Nolan, Developer, Portfolio"/>
+		<meta name="author" content="Indigo Nolan, Indy Nolan"/>
 	</head>
 	
 	<body >
@@ -30,7 +30,7 @@
 
 		<div id="cont">
 			<div class = "container val" id="container">
-				<div tabindex=3 onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indy.</div>
+				<div tabindex=3 onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indigo.</div>
 				<div class = "bio" id="bio">
 					<div tabindex=4 class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Game Dev<br/>- Python for Data Analysis <br/>- SQL and Database Management</p>
 					</div>
