--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="text">
-            Hmmm, that URL isn't valid. <a href = "https://indynolan.com">Go home?</a> 
+            Hmmm, that URL isn't valid. <a href = "https://indigonolan.com">Go home?</a> 
         </div>
     </body>
 </html>
