added a grid layout, more info boxes

--- a/index.html
+++ b/index.html
@@ -30,16 +30,31 @@
 
 		<div id="cont">
 			<div class = "container val" id="container">
-				<div tabindex=3 onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indigo.</div>
+				<div tabindex=0 onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indigo.</div>
 				<div class = "bio" id="bio">
-					<div tabindex=4 class="item-b"><p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Game Dev<br/>- Python for Data Analysis <br/>- SQL and Database Management</p>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Game Dev<br/>- Python for Data Analysis <br/>- SQL and Database Management</p>
 					</div>
-					<div tabindex=5 class="item-b" id="second"><p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Writing <br/>- Video games</p>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Writing <br/>- Video games</p>
 					</div>
-					<div class = "contacts">
-						<a tabindex=6 class = "contact" href = "mailto:indigogonolan@gmail.com">indigogo.nolan@gmail.com</a>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Songs</p>My favourite songs are<br/>- Ai-je perdu le nord, Clio <br/>- On Melancholy Hill, Gorillaz <br/>- Somebody to Love, Jefferson Airplane <br/>- Si tu dois partir, Fairport Convention</p>
+					</div>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Games</p>My favourite games are<br/>- Portal 1 & 2 <br/>- Rimworld <br/>- OpenTTD <br/>- The Sims 2</p>
+					</div>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Books</p>My favourite books are<br/>- Before the Coffee Gets Cold <br/>- The Neverending Story <br/>- Zazie Dans le Metro <br/>- Piranesi</p>
+					</div>
+					<div tabindex=0 class="bio-item">
+						<p class='item-b-title'>// Movies</p>My favourite movies are<br/>- Dr Strangelove <br/>- 12 Angry Men <br/>- The Truman Show <br/>- Life of Brian</p>
 					</div>
 					
+					
+				</div>
+				<div class = "contacts">
+					<a tabindex=0 class = "contact" href = "mailto:indigogonolan@gmail.com">indigogo.nolan@gmail.com</a>
 				</div>
 			</div>
 	
