--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body >
 		<div id="menu">
 			<div tabindex=1 class="tab" data-name="container" data-type="flex" onclick="tab(0)">About</div>
-			<div tabindex=2 class="tab" data-name='portfolio' data-type='block' onclick="tab(1)">Projects</div>
+			<div tabindex=2 class="tab" data-name='portfolio' data-type='grid' onclick="tab(1)">Projects</div>
 		</div>
 
 		<div id="cont">
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 	
-			<div id = "portfolio" class = "portfolio val" style="display:none;"></div>
+			<div id = "portfolio" class = "portfolio val" style="display:none !important;"></div>
 		</div>
 		
 	
