Fixed two home buttons

--- a/palette/index.html
+++ b/palette/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<button onclick="generate()" id = "gen_button" class = "button">Generate</button>
-		<button onclick="home()" id = "home_button" class = "button">Home</button>
+		<button onclick='window.open("..", "_self");' id = "home_button" class = "button">Home</button>
 		<div id = "palette">
 			<!-- dynamically generated columns -->
 		</div>
