--- a/wordle/index.html
+++ b/wordle/index.html
@@ -14,7 +14,7 @@
 		<div id="warning">
 			Play in portrait / on a bigger device.
 		</div>
-		<button onclick="home()" id = "home_button" class = "button">Home</button>
+		<button onclick='window.open("..", "_self");' id = "home_button" class = "button">Home</button>
 		<a href="." id = "new_button" class = "button">New Game</a>
 		<div id = "content">
 			<!-- dynamically generated rows -->
