--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Game Dev<br/>- Python for Data Analysis <br/>- SQL and Database Management</p>
 					</div>
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- Photography <br/>- Writing <br/>- Video games</p>
+						<p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- <a target='_blank' href="https://www.flickr.com/photos/indigon/">Photography (Flickr)</a> <br/>- Writing <br/>- Video games</p>
 					</div>
 					<div tabindex=0 class="bio-item">
 						<p class='item-b-title'>// Songs</p>My favourite songs are<br/>- Ai-je perdu le nord, Clio <br/>- On Melancholy Hill, Gorillaz <br/>- Somebody to Love, Jefferson Airplane <br/>- Si tu dois partir, Fairport Convention</p>
