--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 				<div tabindex=0 onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Indigo.</div>
 				<div class = "bio" id="bio">
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Skills</p>- Web design <br/>- Server-side JS <br/>- C++ and Game Dev<br/>- Python for Data Analysis <br/>- SQL and Database Management</p>
+						<p class='item-b-title'>// About me</p>I'm a Compsci student, I can do <br/>- Web design <br/>- JavaScript for servers<br/>- Game Dev<br/>- Anything Pythony <br/>- SQL and Database Management</p>
 					</div>
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Interests</p>When I'm not coding, I like<br/>- Learning languages <br/>- <a target='_blank' href="https://www.flickr.com/photos/indigon/">Photography (Flickr)</a> <br/>- Writing <br/>- Video games</p>
+						<p class='item-b-title'>// Interests</p>When I'm not coding, I enjoy<br/>- Learning languages <br/>- <a target='_blank' href="https://www.flickr.com/photos/indigon/">Photography (Flickr)</a> <br/>- Writing <br/>- Reading <br/>- Video games</p>
 					</div>
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Songs</p>My favourite songs are<br/>- Ai-je perdu le nord, Clio <br/>- On Melancholy Hill, Gorillaz <br/>- Somebody to Love, Jefferson Airplane <br/>- Si tu dois partir, Fairport Convention</p>
+						<p class='item-b-title'>// Songs</p>My favourite songs are<br/>- Ai-je perdu le nord, Clio <br/>- Comment te dire adieu, Françoise Hardy <br/>- Somebody to Love, Jefferson Airplane <br/>- Si tu dois partir, Fairport Convention</p>
 					</div>
 					<div tabindex=0 class="bio-item">
 						<p class='item-b-title'>// Games</p>My favourite games are<br/>- Portal 1 & 2 <br/>- Rimworld <br/>- OpenTTD <br/>- The Sims 2</p>
 					</div>
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Books</p>My favourite books are<br/>- Before the Coffee Gets Cold <br/>- The Neverending Story <br/>- Zazie Dans le Metro <br/>- Piranesi</p>
+						<p class='item-b-title'>// Books</p>My favourite books are<br/>- Before the Coffee Gets Cold <br/>- Every Tintin book <br/>- Zazie Dans le Metro <br/>- One Hundred Years of Solitude</p>
 					</div>
 					<div tabindex=0 class="bio-item">
 						<p class='item-b-title'>// Movies</p>My favourite movies are<br/>- Dr Strangelove <br/>- 12 Angry Men <br/>- The Truman Show <br/>- Life of Brian</p>
