fix: cache swapped the stylesheets, fixed typo

--- a/palette/index.html
+++ b/palette/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Colour Palette Generator</title>
-		<link rel="stylesheet" href = "stylesheet.css">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.1">
 		<meta name="description" content="Colour Palette Generator"/>
 		<meta name="keywords" content="Zac Nolan, Colour Palette"/>
 		<meta name="author" content="Zac Nolan"/>
