--- a/reaction/index.html
+++ b/reaction/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Reaction Time Test</title>
-		<link rel="stylesheet" href = "stylesheet.css">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.1">
 		<meta name="description" content="Reaction Time Test"/>
 		<meta name="keywords" content="Zac Nolan, Reaction Time"/>
 		<meta name="author" content="Zac Nolan"/>
