--- a/wordle/index.html
+++ b/wordle/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Unlimited Wordle</title>
-		<link rel="stylesheet" href="../stylesheet.css">
-		<link rel="stylesheet" href = "stylesheet.css">
+		<link rel="stylesheet" href="../stylesheet.css?version=0.1">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.1">
 		<meta name="description" content="Unlimited Wordle"/>
 		<meta name="keywords" content="Zac Nolan, Wordle"/>
 		<meta name="author" content="Zac Nolan"/>
