--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Indigo Nolan</title>
-		<link rel="stylesheet" href = "stylesheet.css">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.1">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<meta name="description" content="Hi, I'm Indigo Nolan, a student and web developer based in the UK."/>
