Updated the flickr link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class = "bio" id="bio">
 					
 					<div tabindex=0 class="bio-item">
-						<p class='item-b-title'>// Interests</p>When I'm not coding, I enjoy<br/>- Learning languages <br/>- <a target='_blank' href="https://www.flickr.com/photos/indigon/">Photography (Flickr)</a> <br/>- Writing <br/>- <a target='_blank' href="https://www.goodreads.com/indynolan">Reading (Goodreads)</a> <br/>- Video games</p>
+						<p class='item-b-title'>// Interests</p>When I'm not coding, I enjoy<br/>- Learning languages <br/>- <a target='_blank' href="https://www.flickr.com/people/indigon/">Photography (Flickr)</a> <br/>- Writing <br/>- <a target='_blank' href="https://www.goodreads.com/indynolan">Reading (Goodreads)</a> <br/>- Video games</p>
 					</div>
 					<div tabindex=0 class="bio-item">
 						<p class='item-b-title'>// Songs</p>My favourite songs are<br/>- Ai-je perdu le nord, Clio <br/>- Comment te dire adieu, Françoise Hardy <br/>- Somebody to Love, Jefferson Airplane <br/>- Si tu dois partir, Fairport Convention</p>
