Implement contact dropdown with GitHub and LinkedIn links; enhance button styles

--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
 					<p class="hero-subtitle">Student & Developer based in the UK</p>
 					
 					<div class="hero-actions">
-						<button class="projects-cta" onclick="tab(1)">View Projects</button>
-						<a class="contact-cta" href="mailto:indigogonolan@gmail.com">Get in touch</a>
+						<button class="projects-cta" onclick="tab(1)">View Projects -></button>
+						<div class="contact-dropdown">
+							<button class="contact-cta dropdown-toggle" onclick="toggleDropdown()">Get in touch -></button>
+							<div class="dropdown-menu" id="contactDropdown">
+								<a href="https://github.com/Lem0naise" target="_blank" class="dropdown-item">💻  GitHub</a>
+								<a href="https://linkedin.com/in/indigo-nolan" target="_blank" class="dropdown-item">👔  LinkedIn</a>
+								<a href="mailto:indigogonolan@gmail.com" class="dropdown-item">📩  Email</a>
+							</div>
+						</div>
 					</div>
 				</div>
 				
