Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<button class="contact-cta dropdown-toggle" onclick="toggleDropdown()">Get in touch -></button>
 							<div class="dropdown-menu" id="contactDropdown">
 								<a href="https://github.com/Lem0naise" target="_blank" class="dropdown-item">💻  GitHub</a>
-								<a href="https://linkedin.com/in/indigo-nolan" target="_blank" class="dropdown-item">👔  LinkedIn</a>
+								<a href="https://linkedin.com/in/indigonolan" target="_blank" class="dropdown-item">👔  LinkedIn</a>
 								<a href="mailto:indigogonolan@gmail.com" class="dropdown-item">📩  Email</a>
 							</div>
 						</div>
