fix: syntax errors in structured data

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 			"url": "https://indigonolan.com",
 			"sameAs": [
 				"https://github.com/Lem0naise",
+				"https://www.linkedin.com/in/indigonolan"
 			],
 			"knowsAbout": ["Web Development", "Game Development", "Photography", "Software Engineering"],
-			"alumniOf": "Southampton University",
+			"alumniOf": {
+				"@type": "EducationalOrganization",
+				"name": "University of Southampton"
+				},
 			"description": "Student and web developer based in the UK, specializing in web applications and game development."
 		}
 		</script>
