--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				</div>
 				<div class="portfolio-grid" id="portfolio-grid">
 					<!-- SEO-friendly project content -->
-					<article class="item project-item" data-url="https://cashcat.indigonolan.com" data-external="false">
+					<article class="item project-item" data-url="https://cashcat.app" data-external="false">
 						<h4>CashCat</h4>
 						<p>A user-focused personal budgeting app, building with Josh Wilcox! In Early Access and open to testers right now.</p>
 					</article>
