--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 						<article class="featured-item" itemscope itemtype="https://schema.org/SoftwareApplication">
 							<div class="featured-content">
 								<div class="featured-title-line">
-									<div class="cash-cat-title"><strong>Cash<p class="inline-text">Cat</p></strong></div>
+									<div class="cash-cat-title"><strong>Cash<span class="inline-text">Cat</span></strong></div>
 									<div class="featured-badge">🚀 In Early Access</div>
 								</div>
 								
-								<p class="featured-description" itemprop="description">A user-focused personal budgeting app I am building with Josh Wilcox! It is in Early Access right now.</p>
+								<p class="featured-description" itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now.</p>
 								<div class="featured-links">
 									<a href="https://cashcat.app" target="_blank" class="featured-link-primary" rel="noopener" itemprop="url">Try CashCat →</a>
 									<a href="https://cashcat.indigonolan.com/" target="_blank" class="featured-link-alt" rel="noopener">Alternate Link</a>
