--- a/404.html
+++ b/404.html
@@ -1,13 +1,39 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
-        <link rel="stylesheet" href = "404.css">
-        <title>Page not found</title>
-    </head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Page Not Found - Indigo Nolan</title>
+    <link rel="stylesheet" href="404.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Page not found - Indigo Nolan's website" />
+</head>
 
-    <body>
-        <div class="text">
-            Hmmm, that URL isn't valid. <a href = "https://indigonolan.com">Go home?</a> 
+<body>
+    <header id="header">
+        <div class="header-content">
+            <div class="logo" onclick="window.location.href='https://indigonolan.com'">
+                <img src="imgs/ghub.webp" alt="GitHub">
+                <span>Indigo Nolan</span>
+            </div>
+            <nav id="menu">
+                <div class="tab" onclick="window.location.href='https://indigonolan.com'">Home</div>
+            </nav>
         </div>
-    </body>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="error-content">
+                <h1>404</h1>
+                <h2>Page Not Found</h2>
+                <p>Hmmm, what are you looking for? Whatever it was, it doesn't exist (anymore). If it was something you still want to find, contact me at my new site and I'll see if I can find it!</p>
+                <div class="error-actions">
+                    <button class="home-cta" onclick="window.location.href='https://indigonolan.com'">Go Home</button>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+
 </html>
