fix: schema issues

--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 						<p itemprop="description">A Python computer vision program that solves mazes using the user's camera input. Developed in collaboration with <a href='https://danileliasov.com/' target="_blank" rel="noopener">Danil Eliasov</a>, featuring image processing and pathfinding algorithms.</p>
 					</article>
 					
-					<article class="item project-item" itemscope itemtype="https://schema.org/Event">
+					<article class="item project-item" itemscope itemtype="https://schema.org/SoftwareSourceCode">
 						<h4 itemprop="name"><a href="https://github.com/Lem0naise/student-robotics-ham" target="_blank" rel="noopener" itemprop="url">Student Robotics Competition</a></h4>
 						<p itemprop="description">Participated in a team for the 2023 Student Robotics Competition at the University of Southampton. Placed 5th overall and won the Social Media Presence prize for our team's documentation and outreach efforts.</p>
 					</article>
 					
-					<article class="item project-item github-special" itemscope itemtype="https://schema.org/ProfilePage">
+					<article class="item project-item github-special" itemscope itemtype="https://schema.org/SoftwareSourceCode">
 						<h4 itemprop="name"><a href="https://github.com/Lem0naise" target="_blank" rel="noopener" itemprop="url">🔍 Explore More on my GitHub</a></h4>
 						<p itemprop="description">There might be more interesting projects and experiments on my GitHub profile. Feel free to explore and see what else I've been working on!</p>
 					</article>
