fix metadata and styling

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<article class="featured-item" itemscope itemtype="https://schema.org/SoftwareApplication">
 							<div class="featured-content">
 								<div class="featured-title-line">
-									<div class="cash-cat-title"><strong>Cash<span class="inline-text">Cat</span></strong></div>
+									<div class="cash-cat-title" itemprop="name">CashCat</div>
 								</div>
 								
 								<p class="featured-description" itemprop="description">A free and user-focused personal budgeting webapp. Currently being built in collaboration with Josh Wilcox! In early access right now.</p>
