--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -93,7 +93,7 @@
 			</div>
 		</header>
 
-		<main id="cont">>
+		<main id="cont">
 			<!-- Services Section -->
 			<section class="content-section">
 				<div class="section-content">
@@ -102,22 +102,22 @@
 						<div class="service-card">
 							<div class="service-icon">📐</div>
 							<h3>Mathematics</h3>
-							<p>GCSE (Grade 9) and A-Level (A*) qualified. Covering algebra, geometry, calculus, statistics, and exam preparation.</p>
+							<p>GCSE (Grade 9) and A-Level (A*) qualified.</p>
 						</div>
 						<div class="service-card">
 							<div class="service-icon">💻</div>
 							<h3>Computer Science</h3>
-							<p>GCSE (Grade 9) qualified, currently studying at University. Programming fundamentals, algorithms, and theory.</p>
+							<p>GCSE (Grade 9) qualified, currently studying at University. </p>
 						</div>
 						<div class="service-card">
 							<div class="service-icon">🌐</div>
 							<h3>Web Development</h3>
-							<p>HTML, CSS, JavaScript, responsive design, and modern web development practices.</p>
+							<p>HTML, CSS, JavaScript, modern web development practices.</p>
 						</div>
 						<div class="service-card">
 							<div class="service-icon">🐍</div>
 							<h3>Programming</h3>
-							<p>Python fundamentals, algorithms, data structures, and assembly code basics.</p>
+							<p>Python fundamentals, algorithms, data structures.</p>
 						</div>
 						<div class="service-card">
 							<div class="service-icon">📝</div>
@@ -152,7 +152,6 @@
 							<p>Perfect for occasional help and one-off questions</p>
 							<ul>
 								<li>Flexible scheduling</li>
-								<li>Personalized attention</li>
 								<li>No commitment required</li>
 							</ul>
 						</div>
@@ -163,7 +162,6 @@
 							<ul>
 								<li>5+ hours booked in advance</li>
 								<li>Structured learning plan</li>
-								<li>Progress tracking</li>
 							</ul>
 						</div>
 						<div class="pricing-card">
@@ -173,7 +171,6 @@
 							<ul>
 								<li>Dedicated project guidance</li>
 								<li>Code review and feedback</li>
-								<li>Assignment preparation</li>
 							</ul>
 						</div>
 					</div>
