refactor navigation links to use anchor tags for improved accessibility and consistency

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,9 +80,7 @@
 	<body>
 		<header id="header">
 			<div class="header-content">
-				<div class="logo" onclick="window.location.href='../'">
-					<span>Indigo Nolan</span>
-				</div>
+				<a class="logo" href='../'>Indigo Nolan</a>
 				<nav id="menu">
 					<a href="../" class="tab">Home</a>
 					<a href="./" class="tab active">Projects</a>
