--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -81,9 +81,7 @@
 	<body>
 		<header id="header">
 			<div class="header-content">
-				<div class="logo" onclick="window.location.href='../'">
-					<span>Indigo Nolan</span>
-				</div>
+				<a class="logo" href='../'>Indigo Nolan</a>
 				<nav id="menu">
 					<a href="../" class="tab">Home</a>
 					<a href="../portfolio" class="tab">Projects</a>
